--- a/TheEvent/index.html
+++ b/TheEvent/index.html
@@ -46,6 +46,7 @@
 					<li><a class="nav-link scrollto" href="#schedule">Programme</a></li>
 					<li><a class="nav-link scrollto" href="#venue">GALA B2B</a></li>
 					<li><a class="nav-link scrollto" href="#hotels">Editions</a></li>
+					<li><a class="nav-link scrollto" href="webtv.html">WebTV</a></li>
 					<li><a class="nav-link scrollto" href="Sponsors.html">Sponsors/Partenaires</a></li>
 					<li><a class="nav-link scrollto" href="#contact">Contact</a></li>
 				</ul>
@@ -63,7 +64,9 @@
 			<h1 class="mb-4 pb-0"><span>SOUS LE THÈME </span>: INGÉNIERIE MAROCAINE AU SERVICE DE LA VILLE INTELLIGENTE
 			</h1>
 			<p class="mb-4 pb-0">8-10 Novembre, Cité d’Innovation et Transfert de Technologie Casablanca</p>
-			<a href="https://www.facebook.com/100005571403696/posts/pfbid0mXvNzhEmiyDSmuYRJKe2dozTvWqmLgpxKjyQjzLjdn9AFkuBABBiPv6wRq7u8uxhl/" class="glightbox play-btn mb-4"></a>
+			<a href="https://www.facebook.com/plugins/video.php?height=252&href=https%3A%2F%2Fwww.facebook.com%2Fzikohacker.pirates%2Fvideos%2F423168526512201%2F&show_text=false&width=560&t=0"
+				class="glightbox play-btn mb-4">
+			</a>
 			<a href="#about" class="about-btn scrollto">A propos de l'événement</a>
 		</div>
 	</section><!-- End Hero Section -->
@@ -285,7 +288,8 @@
 					</div>
 					<div class="col-lg-4 col-md-6">
 						<div class="speaker" data-aos="fade-up" data-aos-delay="300">
-							<img src="assets/img/expositions/salle_de_conference1.jpg" alt="Speaker 3" class="img-fluid">
+							<img src="assets/img/expositions/salle_de_conference1.jpg" alt="Speaker 3"
+								class="img-fluid">
 							<div class="details">
 								<h3><a href="exposition.html">Explorer</a></h3>
 								<p></p>
@@ -348,11 +352,10 @@
 
 				<ul class="nav nav-tabs" role="tablist" data-aos="fade-up" data-aos-delay="100">
 					<li class="nav-item">
-						<a class="nav-link active" href="#day-1" role="tab" data-bs-toggle="tab">Jour 1 – 08 November
-							2022</a>
+						<a class="nav-link active" href="#day-1" role="tab" data-bs-toggle="tab">Jour 1 – 08 Novembre 2022</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Jour 2 – 09 November 2022</a>
+						<a class="nav-link" href="#day-2" role="tab" data-bs-toggle="tab">Jour 2 – 09 Novembre 2022</a>
 					</li>
 				</ul>
 
@@ -401,14 +404,13 @@
 							<div class="col-md-12">
 								<ul>
 									<li>
-										<h4>Smart Mobilité Urbaine et Infrastructure Territoriale au Service de Smart
-											Cities</h4>
-										<span class="mt-3">Intervenants : </span>
+										<h4>Smart Mobilité Urbaine et Infrastructure Territoriale au Service de Smart Cities</h4>
+										Intervenants :
 										<ul>
 											<li>
-												L’Impact de la Sûreté de
+												<span>L’Impact de la Sûreté de
 												la Ville sur la Sécurité des
-												Citoyens
+												Citoyens</span>
 												<ul>
 													<li>
 														Maître
@@ -416,8 +418,7 @@
 													</li>
 													<li>
 														Wilaya
-														de la Ville de
-														Marrakech
+														de la Ville
 													</li>
 													<li>
 														Association
@@ -440,9 +441,9 @@
 												</ul>
 											</li>
 											<li>
-												La Fluidité de la Route
+												<span>La Fluidité de la Route
 												contre la Congestion de la
-												Circulation Routière
+												Circulation Routière</span>
 												<ul>
 													<li>
 														BET : INNOVATEL
@@ -472,7 +473,7 @@
 										<h4>L’intelligence du Transport Public Vert et écologique
 											(Trame, busway, Bus électrique) à travers l’instauration de Smart Parking
 										</h4>
-										<span class="mt-3">Intervenants : </span>
+										Intervenants :
 										<ul>
 											<li>Maître
 												d’ouvrage
@@ -506,7 +507,7 @@
 								<ul>
 									<li>
 										<h4>Smart Lighting et Energie au Service de Smart Cities</h4>
-										<span class="mt-3">Intervenants : </span>
+										Intervenants :
 										<ul>
 											<li>Maître
 												d’ouvrage
@@ -534,7 +535,7 @@
 									<li>
 										<h4>Télécommunication et Transformation Digitale aux Services de Smart Cities
 										</h4>
-										<span class="mt-3">Intervenants : </span>
+										Intervenants :
 										<ul>
 											<li>Maître
 												d’ouvrage
@@ -566,18 +567,18 @@
 								<ul>
 									<li>
 										<h4>Smart Environnement Durable au Service de la Ville Verte</h4>
-										<span class="mt-3">Intervenants : </span>
+										Intervenants :
 										<ul>
 											<li>
-												L’impact des Villes Vertes
-												sur l’Environnement Durable
+												<span>L’impact des Villes Vertes
+												sur l’Environnement Durable</span>
 												<ul>
 													<li>
 														SADV, SAEDM
 														et Ville ZENATA
 													</li>
 													<li>
-														BET : JESA
+														BET : 
 													</li>
 													<li>
 														Association
@@ -593,8 +594,8 @@
 												</ul>
 											</li>
 											<li>
-												Optimisation des ressources
-												en Eau Potable et Irrigation
+												<span>Optimisation des ressources
+												en Eau Potable et Irrigation</span>
 												<ul>
 													<li>
 														Maître
@@ -679,8 +680,7 @@
 
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
-					<h2>Editions Events Précédents</h2>
-					<p>1ère Edition du Concours de l’Innovation Africaine CIA 2017</p>
+					<h2>Editions Event Précédents</h2>
 				</div>
 
 				<div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -714,7 +714,7 @@
 
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
-					<p>2ème Edition du concours de l’innovation Africaine CIA 2018</p>
+					<p>1ère Edition du Concours de l’Innovation Africaine CIA 2017</p>
 				</div>
 
 				<div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -756,7 +756,7 @@
 
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
-					<p>7ème Edition du congrès Arabe d’Innovation 2018 au Maroc</p>
+					<p>2ème Edition du concours de l’innovation Africaine CIA 2018</p>
 				</div>
 
 				<div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -781,7 +781,7 @@
 
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
-					<p>Sponsor de 10 Maisonnetes lors de la Compétition Solar Decathlon Africa SDA 2019</p>
+					<p>7ème Edition du congrès Arabe d’Innovation 2018 au Maroc</p>
 				</div>
 
 				<div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -798,7 +798,7 @@
 
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
-					<p>4ème Edition de la Conférence Internationale de Syscobiots à ESTC 2019</p>
+					<p>Sponsor de 10 Maisonnetes lors de la Compétition Solar Decathlon Africa SDA 2019</p>
 				</div>
 
 				<div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -822,39 +822,14 @@
 					<div class="col-lg-4 col-md-6">
 						<div class="hotel">
 							<div class="hotel-img">
-								<img src="assets/img/14.png" alt="Hotel 3" class="img-fluid">
-							</div>
-						</div>
-					</div>
-
-				</div>
-			</div>
-
-			<div class="container" data-aos="fade-up">
-				<div class="section-header">
-					<p>Journée Aéro ENSEM 2022</p>
-				</div>
-
-				<div class="row d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-
-					<div class="col-lg-4 col-md-6">
-						<div class="hotel">
-							<div class="hotel-img">
 								<img src="assets/img/15.png" alt="Hotel 1" class="img-fluid">
 							</div>
 						</div>
 					</div>
 
-
-
-					<div class="col-lg-6 col-md-6">
-						<div class="hotel">
-							<div class="hotel-img">
-								<img src="assets/img/17.png" alt="Hotel 3" class="img-fluid">
-							</div>
-						</div>
-					</div>
-
+				</div>
+				<div class="section-header">
+					<p>4ème Edition de la Conférence Internationale de Syscobiots à ESTC 2019</p>
 				</div>
 			</div>
 
@@ -870,59 +845,70 @@
 					<h2>Formules Sponsor</h2>
 				</div>
 
-				<div class="row no-gutters supporters-wrap clearfix d-flex justify-content-end" data-aos="zoom-in" data-aos-delay="100">
+				<div class="row no-gutters supporters-wrap clearfix d-flex justify-content-center" data-aos="zoom-in"
+					data-aos-delay="100">
 
 					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=1"><img src="assets/img/gold.png"
-									class="img-fluid" alt=""></a>
+							<a href="Sponsoring/index.php?form_id=1"><img src="assets/img/gold.png" class="img-fluid"
+									alt=""></a>
 						</div>
-						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=1"><h3>Sponsor Officiel</h3></a>
+						<div class="supporter-title">
+							<a href="Sponsoring/index.php?form_id=1">
+								<h3>Sponsor Officiel</h3>
+							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=2"><img src="assets/img/Silver.png"
-									class="img-fluid" alt=""></a>
+							<a href="Sponsoring/index.php?form_id=2"><img src="assets/img/Silver.png" class="img-fluid"
+									alt=""></a>
 						</div>
-						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=2"><h3>Platinum</h3></a>
-						</div>
-					</div>
-
-					<div class="col-lg-2 col-md-4 col-xs-6">
-						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=3"><img src="assets/img/gold.png"
-									class="img-fluid" alt=""></a>
-						</div>
-						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=3"><h3>Gold</h3></a>
+						<div class="supporter-title">
+							<a href="Sponsoring/index.php?form_id=2">
+								<h3>Platinum</h3>
+							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=4"><img src="assets/img/Silver.png"
-									class="img-fluid" alt=""></a>
+							<a href="Sponsoring/index.php?form_id=3"><img src="assets/img/gold.png" class="img-fluid"
+									alt=""></a>
 						</div>
+						<div class="supporter-title">
+							<a href="Sponsoring/index.php?form_id=3">
+								<h3>Gold</h3>
+							</a>
+						</div>
+					</div>
+
+					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=4"><h3>Silver</h3></a>
+							<a href="Sponsoring/index.php?form_id=4"><img src="assets/img/Silver.png" class="img-fluid"
+									alt=""></a>
+						</div>
+						<div class="supporter-title">
+							<a href="Sponsoring/index.php?form_id=4">
+								<h3>Silver</h3>
+							</a>
 						</div>
 					</div>
 
 					<div class="col-lg-2 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=5"><img src="assets/img/gold.png"
-									class="img-fluid" alt=""></a>
+							<a href="Sponsoring/index.php?form_id=5"><img src="assets/img/gold.png" class="img-fluid"
+									alt=""></a>
 						</div>
-						<div class="supporter-logo">
-							<a href="Sponsoring/index.php?form_id=5"><h3>Partenaire</h3></a>
+						<div class="supporter-title">
+							<a href="Sponsoring/index.php?form_id=5">
+								<h3>Partenaire</h3>
+							</a>
 						</div>
 					</div>
 
-					<div class="col-lg-2 col-md-4 col-xs-6">
+					<div class="col-lg-12 col-md-4 col-xs-6">
 						<div class="supporter-logo">
 							<a class="buy-tickets scrollto" href="Sponsoring/sponsor.php">Devenir Sponsor</a>
 						</div>
@@ -1010,9 +996,12 @@
 					<div class="col-lg-3 col-md-6 social-links">
 
 						<h4>Nous suivre</h4>
-						<a href="https://www.facebook.com/innovatelengineering" class="facebook"><i class="bi bi-facebook"></i></a>
-						<a href="https://www.instagram.com/innovatel_engineering/" class="instagram"><i class="bi bi-instagram"></i></a>
-						<a href="https://www.linkedin.com/company/innovatel-engineering/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+						<a href="https://www.facebook.com/innovatelengineering" class="facebook"><i
+								class="bi bi-facebook"></i></a>
+						<a href="https://www.instagram.com/innovatel_engineering/" class="instagram"><i
+								class="bi bi-instagram"></i></a>
+						<a href="https://www.linkedin.com/company/innovatel-engineering/" class="linkedin"><i
+								class="bi bi-linkedin"></i></a>
 
 					</div>
 
