--- a/TheEvent/Challenge/index.html
+++ b/TheEvent/Challenge/index.html
@@ -53,7 +53,7 @@
 
 			<nav id="navbar" class="navbar">
 				<ul>
-					<li><a href="index.html" class="active">Accueil</a></li>
+					<li><a href="../index.html" class="active">Accueil</a></li>
 					<li><a href="#features">Informations</a></li>
 					<li><a href="#jury">Jury</a></li>
 					<li><a href="#dates">Dates Importantes</a></li>
