--- a/TheEvent/index.html
+++ b/TheEvent/index.html
@@ -308,28 +308,28 @@
 		<section id="speakers">
 			<div class="container" data-aos="fade-up">
 				<div class="section-header">
-					<h2>Comité Technologique</h2>
+					<h2>EDITORIAL</h2>
 				</div>
 
 				<div class="row d-flex justify-content-center">
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-3 col-md-6">
 						<div class="speaker" data-aos="fade-up" data-aos-delay="100">
-							<img src="assets/img//speakers/3.jpg" alt="Speaker 1" class="img-fluid">
+							<img src="assets/img/rifi.png" alt="Speaker 1" class="img-fluid">
 							<div class="details">
-								<h3><a href="exposition.html">Nom Prenom</a></h3>
-								<p></p>
+								<h3><a href="exposition.html">Riffi Mounir</a></h3>
+								<p>Président du Comité <br> Scientifique</p>
 								<div class="social">
 
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6">
+					<div class="col-lg-3 col-md-6">
 						<div class="speaker" data-aos="fade-up" data-aos-delay="200">
-							<img src="assets/img/speakers/4.jpg" alt="Speaker 2" class="img-fluid">
+							<img src="assets/img/bennani.png" alt="Speaker 2" class="img-fluid">
 							<div class="details">
-								<h3><a href="exposition.html">Nom Prenom</a></h3>
-								<p></p>
+								<h3><a href="exposition.html">Bennani Lotfi</a></h3>
+								<p>Président du Comité Technologique et Ingénierie</p>
 								<div class="social">
 
 								</div>
