edited partenaires challenge

--- a/TheEvent/Challenge/index.html
+++ b/TheEvent/Challenge/index.html
@@ -1050,15 +1050,18 @@
 
 			<div class="container" data-aos="fade-up">
 				<div class="section-title">
-					<h2>Partenaire</h2>
-					<p>Partenaire</p>
+					<h2>Partenaires</h2>
+					<p>Partenaires</p>
 				</div>
 
 				<div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
 					<div class="col-lg-3 col-md-4 col-xs-6">
 						<div class="supporter-logo">
-							<img src="assets/img/jci.png" class="img-fluid" alt="">
+							<h4>Co-organisateur</h4>
+						</div>
+						<div class="supporter-logo">
+							<a href="https://www.jcicasablanca.ma"><img src="assets/img/jci.png" class="img-fluid" alt=""></a>
 						</div>
 					</div>
 
